--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -25,11 +25,14 @@
   
 .features {
     margin-bottom: 2rem;
-    background-color: #FAFAFA;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
     padding: 10px;
+}
+
+.features:hover {
+    background-color: #FAFAFA;
 }
   
 .feature-heading {
@@ -50,8 +53,11 @@
 
 .benefits {
     margin-bottom: 2rem;
-    background-color: #F5F5F5;
     padding: 10px;
+}
+
+.benefits:hover {
+    background-color: #F5F5F5;
 
 }
   
